--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "csso": "^5.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-responsive": "^9.0.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toggle": "^4.1.3",
     "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
